# clueless

./: .gitignore  .opencodeignore  API_INTEGRATION_GUIDE.md  CLAUDE.md  COMPREHENSIVE_PROJECT_SUMMARY.md  LICENSE  PYINSTALLER_GUIDE.md  README.md  Untitled-1.psd  build-server.spec  electron-builder.json  index.html  package-lock.json  package.json  plan.MD  pyproject.toml  requirements.txt
docs/: api-reference.md  architecture.md  configuration.md  contributing.md  development.md  getting-started.md  mcp-guide.md
mcp_servers/: INTEGRATION_GUIDE.md  README.md  __init__.py  requirements.txt  test_demo.py
mcp_servers/client/: ollama_bridge.py
mcp_servers/config/: servers.json
mcp_servers/servers/: __init__.py
mcp_servers/servers/calendar/: calander_descriptions.py  server.py
mcp_servers/servers/canvas/: server.py
mcp_servers/servers/demo/: server.py
mcp_servers/servers/discord/: server.py
mcp_servers/servers/filesystem/: descriptions.py  filesystem_descriptions.py  server.py
mcp_servers/servers/gmail/: gmail_descriptions.py  server.py
mcp_servers/servers/terminal/: blocklist.py  server.py  terminal_descriptions.py
mcp_servers/servers/websearch/: descriptions.py  server.py
scripts/: build-python-exe.py  build-python.mjs
source/: __init__.py  app.py  config.py  database.py  main.py  ss.py
source/api/: __init__.py  handlers.py  http.py  terminal.py  websocket.py
source/core/: __init__.py  connection.py  lifecycle.py  request_context.py  state.py  thread_pool.py
source/llm/: __init__.py  cloud_provider.py  key_manager.py  ollama_provider.py  prompt.py  router.py
source/mcp_integration/: __init__.py  cloud_tool_handlers.py  default_skills.py  handlers.py  manager.py  retriever.py  skill_injector.py  terminal_executor.py
source/services/: __init__.py  approval_history.py  conversations.py  google_auth.py  screenshots.py  terminal.py  transcription.py
source/user_data/: clueless_app.db
src/electron/: main.ts  pcResources.ts  preload.ts  pythonApi.ts
src/ui/: App.css  App.tsx  main.tsx
user_data/: clueless_app.db
(+58 files in other folders)
