[project]
name = "clueless"
version = "0.1.0"
description = "AI-powered desktop assistant with Electron, React, and Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.116.1",
    "mcp[cli]>=1.26.0",
    "ollama>=0.5.3",
    "pillow>=11.3.0",
    "pynput>=1.8.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.15.0",
]
